# readable-comment

./: .babelrc  .env  .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml
src/: globals.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: _app.tsx  index.module.css  index.tsx
src/styles/: globals.css
